fix: align buttons

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -70,3 +70,8 @@
 .tarefas li:hover .edit {
   color: var(--neutral-color);
 }
+
+.tarefas li span {
+  display: flex;
+  align-items: center;
+}
